chore: electron added

--- a/cross-platform-monorepo/package.json
+++ b/cross-platform-monorepo/package.json
@@ -1,12 +1,19 @@
 {
   "name": "cross-platform-monorepo",
   "version": "0.0.0",
+  "description": "Cross-platform monorepo Angular app",
+  "author": {
+    "name": "your name",
+    "email": "your@email.address"
+  },
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "start": "npm-run-all -p electron:serve start:tetris",
+    "electron:serve-tsc": "tsc -p tsconfig.serve.json",
+    "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "start:tetris": "ng serve tetris -o",
     "build:tetris": "ng build tetris",
     "test:tetris": "ng test tetris",
@@ -16,7 +23,11 @@
     "build:game-engine-lib": "ng build game-engine-lib --watch",
     "test:game-engine-lib": "ng test game-engine-lib",
     "lint:game-engine-lib": "ng lint game-engine-lib",
-    "e2e:game-engine-lib": "ng e2e game-engine-lib"
+    "e2e:game-engine-lib": "ng e2e game-engine-lib",
+    "postinstall": "electron-builder install-app-deps",
+    "build": "npm run electron:serve-tsc && ng build tetris --base-href ./",
+    "build:prod": "npm run build -- -c production",
+    "electron:package": "npm run build:prod && electron-builder build"
   },
   "private": true,
   "dependencies": {
@@ -28,9 +39,12 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "ng-zzfx": "^0.0.6",
+    "npm-run-all": "^4.1.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "wait-on": "^6.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -39,6 +53,8 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "electron": "^11.0.5",
+    "electron-builder": "^23.0.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
