--- a/cross-platform-monorepo/angular.json
+++ b/cross-platform-monorepo/angular.json
@@ -28,12 +28,16 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/tetris/src/favicon.ico",
-              "projects/tetris/src/assets"
+              "projects/tetris/src/assets",
+              "projects/tetris/src/manifest.webmanifest",
+              "projects/tetris/src/manifest.webmanifest"
             ],
             "styles": [
               "projects/tetris/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "serviceWorker": true,
+            "ngswConfigPath": "projects/tetris/ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -96,7 +100,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/tetris/src/favicon.ico",
-              "projects/tetris/src/assets"
+              "projects/tetris/src/assets",
+              "projects/tetris/src/manifest.webmanifest",
+              "projects/tetris/src/manifest.webmanifest"
             ],
             "styles": [
               "projects/tetris/src/styles.scss"
