--- a/cross-platform-monorepo/package.json
+++ b/cross-platform-monorepo/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
     "electron-reload": "^2.0.0-alpha.1",
     "ng-zzfx": "^0.0.6",
     "npm-run-all": "^4.1.5",
@@ -49,8 +50,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~13.3.3",
+    "@angular/cli": "^13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@angular/pwa": "^13.3.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "electron": "^11.0.5",
