ready for online

--- a/cross-platform-monorepo/package.json
+++ b/cross-platform-monorepo/package.json
@@ -11,7 +11,8 @@
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start": "npm-run-all -p electron:serve start:tetris",
+    "start-electron": "npm-run-all -p electron:serve start:tetris",
+    "start": "http-server -p $PORT -c-1 dist/tetris",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "start:tetris": "ng serve tetris -o",
